--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,4 +19,6 @@
 @import 'blocks/promo';
 @import 'blocks/title';
 @import 'blocks/buttons';
-@import 'blocks/sidepanel.scss';
+@import 'blocks/sidepanel';
+@import 'blocks/menu';
+@import 'blocks/animation';
