--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -61,8 +61,9 @@
         font-size: 24px;
         line-height: 36px;
         margin-bottom: 15px;
-        width: 180px;
         a {
+            position: relative;
+            text-decoration: none;
             color: #FFFFFF;
             &::before {
                 content: '';
@@ -75,9 +76,24 @@
                 border-radius: 100%;
                 transition: all 0.6s;
             }
+            &::after{
+                content: '';
+                display: none;
+                position: absolute;
+                width: fit-content;
+                background-color: #fff;
+                height: 4px;
+                left: 0;
+                top: 30px;
+            }
             &:hover {
                 &::before {
                     background-color: #fff;
+                }
+                &::after {
+                    display: block;
+                    width: fit-content;
+                    animation: underline 0.6s linear forwards;
                 }
             }
         }
