--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,13 @@
     margin: 0 auto;
 }
 
+.divider {
+    width: 60px;
+    border: 2px solid #FFA501;
+    background-color: $main-color;
+    margin: 25px auto 0 auto;
+}
+
 @import 'blocks/promo';
 @import 'blocks/title';
 @import 'blocks/buttons';
@@ -23,3 +30,4 @@
 @import 'blocks/menu';
 @import 'blocks/animation';
 @import 'blocks/myself';
+@import 'blocks/resume';
