--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -108,6 +108,13 @@
         justify-content: space-between;
         align-items: center;
         bottom: 50px;
+        img {
+            transition: all 0.6s;
+            &:hover {
+                transform: scale(1.2);
+            }
+        }
+        
     }
     &__overlay {
         position: fixed;
