--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -25,4 +25,10 @@
             color: #000000;
         }
     }
+    &__link {
+        transition: all 0.6s;
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
 }
