--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -21,4 +21,18 @@
     &_fz48 {
         font-size: 48px;
     }
+    &__section-title {
+        position: relative;
+        text-align: center;
+        @include before_circle;
+        &:before {
+            position: absolute;
+            top: -6px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+    &__section-subtitle {
+        text-align: center;
+    }
 }
