--- a/src/sass/blocks/_work.scss
+++ b/src/sass/blocks/_work.scss
@@ -1,8 +1,6 @@
 .work {
     min-height: 1000px;
-    &__title {
-        margin-top: 120px
-    }
+    padding-top: 120px;
     &__wrapper {
         display: grid;
         grid-template-columns: repeat(4, 270px);
