--- a/src/sass/blocks/_myself.scss
+++ b/src/sass/blocks/_myself.scss
@@ -4,13 +4,17 @@
     &__wrapper {
         display: grid;
         grid-template-columns: 400px 600px;
-        grid-template-rows: 250px 250px;
+        grid-template-rows: 280px 280px;
         column-gap: 70px;
         row-gap: 40px;
     }
     &__photo {
-        grid-column: 0 / 1;
-        grid-row: 0 / 3;
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+        img {
+            width: 100%;
+        }
+
     }
     &__aboutme {
         .divider {
