--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -10,6 +10,8 @@
     &__photo {
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
     &__title {
