--- a/src/sass/blocks/_animation.scss
+++ b/src/sass/blocks/_animation.scss
@@ -6,3 +6,24 @@
         width: 100%;
     }
 }
+@keyframes move-light {
+    from {
+        transform: translateX(-4em) skewX(-45deg)
+      }
+        
+      to {
+        transform: translateX(10em) skewX(-45deg)
+      }
+}
+@keyframes move-light-longer {
+    from {
+        transform: translateX(-4em) skewX(-45deg)
+      }
+        
+      to {
+        transform: translateX(18em) skewX(-45deg)
+      }
+}
+
+
+    
